--- a/.env.appStore.example
+++ b/.env.appStore.example
@@ -42,7 +42,7 @@ DAILY_WEBHOOK_SECRET=''
 #   - GOOGLE CALENDAR/MEET/LOGIN
 # Needed to enable Google Calendar integration and Login with Google
 # @see https://github.com/calcom/cal.com#obtaining-the-google-api-credentials
-GOOGLE_API_CREDENTIALS={"web":{"client_id":"609581813467-62ce0gnvpot0kaag6k3tk1fplkuflh2g.apps.googleusercontent.com","project_id":"cal-skincv","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://oauth2.googleapis.com/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","client_secret":"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","redirect_uris":["https://app.skincv.com/api/integrations/googlecalendar/callback","https://app.skincv.com/api/auth/callback/google"],"javascript_origins":["https://app.skincv.com"]}}
+GOOGLE_API_CREDENTIALS=
 
 # To enable Login with Google you need to:
 # 1. Set `GOOGLE_API_CREDENTIALS` above
