--- a/.env.appStore.example
+++ b/.env.appStore.example
@@ -42,7 +42,7 @@ DAILY_WEBHOOK_SECRET=''
 #   - GOOGLE CALENDAR/MEET/LOGIN
 # Needed to enable Google Calendar integration and Login with Google
 # @see https://github.com/calcom/cal.com#obtaining-the-google-api-credentials
-gitGOOGLE_API_CREDENTIALS=
+GOOGLE_API_CREDENTIALS=
 
 # To enable Login with Google you need to:
 # 1. Set `GOOGLE_API_CREDENTIALS` above
